fix(web-ui): improve mobile friendliness > hide some items in nav bar when screen width is less than 1000px - usually means we're on mobile - even if not on mobile, with this width, the items will overlap, so they're useless on screen

--- a/Web-UI/public-assets/global.css
+++ b/Web-UI/public-assets/global.css
@@ -51,3 +51,9 @@ h2.heading {
     margin: 0;
     margin-bottom: 0.5em;
 }
+
+@media only screen and (max-width: 1000px) {
+    .hide-on-small-screen {
+        display: none;
+    }
+}
